fixed questionasking section overlapping with videoplayer on small screen

--- a/assets/css/globals/QuestionAndAnswer/QuestionView.scss
+++ b/assets/css/globals/QuestionAndAnswer/QuestionView.scss
@@ -3,7 +3,7 @@
 
 .questionView {
   height: 80%;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 50px;
 
   .qaTitle {
